Add Nametag system and improve player display features
Introduces a NametagManager with supporting configuration, formatting, and data classes for customizable player nametags. Integrates nametag creation, updating, and removal into join, quit, disguise, and reload events. Refactors listeners and configuration to support new features, adds sorting options for tablist, and improves handling of disguised players' display names and ranks. Removes verbose database connection logs and updates dependency management logic.